added bootstrap table and fontawesome save icon

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,6 +30,54 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <table class="table">
+        <tbody>
+          <tr>
+            <th scope="row" class="col-1 border-right">9AM</th>
+            <td class="col-10 border-right">Message</td>
+            <td class="fas fa-save"></td>
+          </tr>
+          <tr>
+            <th scope="row" class="col-1 border-right">10AM</th>
+            <td class="col-10 border-right">Message</td>
+            <td class="fas fa-save"></td>
+          </tr><tr>
+            <th scope="row" class="col-1 border-right">11AM</th>
+            <td class="col-10 border-right">Message</td>
+            <td class="fas fa-save"></td>
+          </tr>
+          <tr>
+            <th scope="row" class="col-1 border-right">12PM</th>
+            <td class="col-10 border-right">Message</td>
+            <td class="fas fa-save"></td>
+          </tr>
+          <tr>
+            <th scope="row" class="col-1 border-right">1PM</th>
+            <td class="col-10 border-right">Message</td>
+            <td class="fas fa-save"></td>
+          </tr>
+          <tr>
+            <th scope="row" class="col-1 border-right">2PM</th>
+            <td class="col-10 border-right">Message</td>
+            <td class="fas fa-save"></td>
+          </tr>
+          <tr>
+            <th scope="row" class="col-1 border-right">3PM</th>
+            <td class="col-10 border-right">Message</td>
+            <td class="fas fa-save"></td>
+          </tr>
+          <tr>
+            <th scope="row" class="col-1 border-right">4PM</th>
+            <td class="col-10 border-right">Message</td>
+            <td class="fas fa-save"></td>
+          </tr>
+          <tr>
+            <th scope="row" class="col-1 border-right border-bottom">5PM</th>
+            <td class="col-10 border-right border-bottom">Message</td>
+            <td class="fas fa-save border-bottom"></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
