added input field to large table cells

--- a/index.html
+++ b/index.html
@@ -34,46 +34,46 @@
         <tbody>
           <tr>
             <th scope="row" class="col-1 border-right">9AM</th>
-            <td class="col-10 border-right">Message</td>
+            <td class="col-10 border-right"><input type="text"></td>
             <td class="fas fa-save"></td>
           </tr>
           <tr>
             <th scope="row" class="col-1 border-right">10AM</th>
-            <td class="col-10 border-right">Message</td>
+            <td class="col-10 border-right"><input type="text"></td>
             <td class="fas fa-save"></td>
           </tr><tr>
             <th scope="row" class="col-1 border-right">11AM</th>
-            <td class="col-10 border-right">Message</td>
+            <td class="col-10 border-right"><input type="text"></td>
             <td class="fas fa-save"></td>
           </tr>
           <tr>
             <th scope="row" class="col-1 border-right">12PM</th>
-            <td class="col-10 border-right">Message</td>
+            <td class="col-10 border-right"><input type="text"></td>
             <td class="fas fa-save"></td>
           </tr>
           <tr>
             <th scope="row" class="col-1 border-right">1PM</th>
-            <td class="col-10 border-right">Message</td>
+            <td class="col-10 border-right"><input type="text"></td>
             <td class="fas fa-save"></td>
           </tr>
           <tr>
             <th scope="row" class="col-1 border-right">2PM</th>
-            <td class="col-10 border-right">Message</td>
+            <td class="col-10 border-right"><input type="text"></td>
             <td class="fas fa-save"></td>
           </tr>
           <tr>
             <th scope="row" class="col-1 border-right">3PM</th>
-            <td class="col-10 border-right">Message</td>
+            <td class="col-10 border-right"><input type="text"></td>
             <td class="fas fa-save"></td>
           </tr>
           <tr>
             <th scope="row" class="col-1 border-right">4PM</th>
-            <td class="col-10 border-right">Message</td>
+            <td class="col-10 border-right"><input type="text"></td>
             <td class="fas fa-save"></td>
           </tr>
           <tr>
             <th scope="row" class="col-1 border-right border-bottom">5PM</th>
-            <td class="col-10 border-right border-bottom">Message</td>
+            <td class="col-10 border-right border-bottom"><input type="text"></td>
             <td class="fas fa-save border-bottom"></td>
           </tr>
         </tbody>
