--- a/index.html
+++ b/index.html
@@ -1,86 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+        <h1 class="display-3">Work Day Scheduler</h1>
+        <p class="lead">A simple calendar app for scheduling your work day</p>
+        <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
-      <table class="table">
-        <tbody>
-          <tr>
-            <th scope="row" class="col-1 border-right">9AM</th>
-            <td class="col-10 border-right"><input type="text"></td>
-            <td class="fas fa-save"></td>
-          </tr>
-          <tr>
-            <th scope="row" class="col-1 border-right">10AM</th>
-            <td class="col-10 border-right"><input type="text"></td>
-            <td class="fas fa-save"></td>
-          </tr><tr>
-            <th scope="row" class="col-1 border-right">11AM</th>
-            <td class="col-10 border-right"><input type="text"></td>
-            <td class="fas fa-save"></td>
-          </tr>
-          <tr>
-            <th scope="row" class="col-1 border-right">12PM</th>
-            <td class="col-10 border-right"><input type="text"></td>
-            <td class="fas fa-save"></td>
-          </tr>
-          <tr>
-            <th scope="row" class="col-1 border-right">1PM</th>
-            <td class="col-10 border-right"><input type="text"></td>
-            <td class="fas fa-save"></td>
-          </tr>
-          <tr>
-            <th scope="row" class="col-1 border-right">2PM</th>
-            <td class="col-10 border-right"><input type="text"></td>
-            <td class="fas fa-save"></td>
-          </tr>
-          <tr>
-            <th scope="row" class="col-1 border-right">3PM</th>
-            <td class="col-10 border-right"><input type="text"></td>
-            <td class="fas fa-save"></td>
-          </tr>
-          <tr>
-            <th scope="row" class="col-1 border-right">4PM</th>
-            <td class="col-10 border-right"><input type="text"></td>
-            <td class="fas fa-save"></td>
-          </tr>
-          <tr>
-            <th scope="row" class="col-1 border-right border-bottom">5PM</th>
-            <td class="col-10 border-right border-bottom"><input type="text"></td>
-            <td class="fas fa-save border-bottom"></td>
-          </tr>
-        </tbody>
-      </table>
+        <!-- Timeblocks go here -->
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th scope="row" class="col-1 border-right">9AM</th>
+                    <td class="col-10 border-right"><input type="text"></td>
+                    <td class="fas fa-save"></td>
+                </tr>
+                <tr>
+                    <th scope="row" class="col-1 border-right">10AM</th>
+                    <td class="col-10 border-right">
+                        <input type="text">
+                    </td>
+                    <td class="fas fa-save"></td>
+                </tr>
+                <tr>
+                    <th scope="row" class="col-1 border-right">11AM</th>
+                    <td class="col-10 border-right"><input type="text"></td>
+                    <td class="fas fa-save"></td>
+                </tr>
+                <tr>
+                    <th scope="row" class="col-1 border-right">12PM</th>
+                    <td class="col-10 border-right"><input type="text"></td>
+                    <td class="fas fa-save"></td>
+                </tr>
+                <tr>
+                    <th scope="row" class="col-1 border-right">1PM</th>
+                    <td class="col-10 border-right"><input type="text"></td>
+                    <td class="fas fa-save"></td>
+                </tr>
+                <tr>
+                    <th scope="row" class="col-1 border-right">2PM</th>
+                    <td class="col-10 border-right"><input type="text"></td>
+                    <td class="fas fa-save"></td>
+                </tr>
+                <tr>
+                    <th scope="row" class="col-1 border-right">3PM</th>
+                    <td class="col-10 border-right"><input type="text"></td>
+                    <td class="fas fa-save"></td>
+                </tr>
+                <tr>
+                    <th scope="row" class="col-1 border-right">4PM</th>
+                    <td class="col-10 border-right"><input type="text"></td>
+                    <td class="fas fa-save"></td>
+                </tr>
+                <tr>
+                    <th scope="row" class="col-1 border-right border-bottom">5PM</th>
+                    <td class="col-10 border-right border-bottom"><input type="text"></td>
+                    <td class="fas fa-save border-bottom"></td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+    <script src="./assets/js/app.js"></script>
+</body>
+
 </html>
