completed jQuery and removed excess CSS classes

--- a/index.html
+++ b/index.html
@@ -24,51 +24,67 @@
         <table class="table">
             <tbody>
                 <tr>
-                    <th scope="row" class="col-1 border-right">9AM</th>
-                    <td class="col-10 border-right"><input type="text"></td>
-                    <td class="fas fa-save"></td>
-                </tr>
-                <tr>
-                    <th scope="row" class="col-1 border-right">10AM</th>
+                    <th scope="row" class="col-1 border-right text-right">9AM</th>
                     <td class="col-10 border-right">
-                        <input type="text">
+                        <input type="text" data-hour="9">
                     </td>
-                    <td class="fas fa-save"></td>
+                    <td class="fas fa-save saveBtn"></td>
                 </tr>
                 <tr>
-                    <th scope="row" class="col-1 border-right">11AM</th>
-                    <td class="col-10 border-right"><input type="text"></td>
-                    <td class="fas fa-save"></td>
+                    <th scope="row" class="col-1 border-right text-right">10AM</th>
+                    <td class="col-10 border-right">
+                        <input type="text" data-hour="10">
+                    </td>
+                    <td class="fas fa-save saveBtn"></td>
                 </tr>
                 <tr>
-                    <th scope="row" class="col-1 border-right">12PM</th>
-                    <td class="col-10 border-right"><input type="text"></td>
-                    <td class="fas fa-save"></td>
+                    <th scope="row" class="col-1 border-right text-right">11AM</th>
+                    <td class="col-10 border-right">
+                        <input type="text" data-hour="11">
+                    </td>
+                    <td class="fas fa-save saveBtn"></td>
                 </tr>
                 <tr>
-                    <th scope="row" class="col-1 border-right">1PM</th>
-                    <td class="col-10 border-right"><input type="text"></td>
-                    <td class="fas fa-save"></td>
+                    <th scope="row" class="col-1 border-right text-right">12PM</th>
+                    <td class="col-10 border-right">
+                        <input type="text" data-hour="12">
+                    </td>
+                    <td class="fas fa-save saveBtn"></td>
                 </tr>
                 <tr>
-                    <th scope="row" class="col-1 border-right">2PM</th>
-                    <td class="col-10 border-right"><input type="text"></td>
-                    <td class="fas fa-save"></td>
+                    <th scope="row" class="col-1 border-right text-right">1PM</th>
+                    <td class="col-10 border-right">
+                        <input type="text" data-hour="13">
+                    </td>
+                    <td class="fas fa-save saveBtn"></td>
                 </tr>
                 <tr>
-                    <th scope="row" class="col-1 border-right">3PM</th>
-                    <td class="col-10 border-right"><input type="text"></td>
-                    <td class="fas fa-save"></td>
+                    <th scope="row" class="col-1 border-right text-right">2PM</th>
+                    <td class="col-10 border-right">
+                        <input type="text" data-hour="14">
+                    </td>
+                    <td class="fas fa-save saveBtn"></td>
                 </tr>
                 <tr>
-                    <th scope="row" class="col-1 border-right">4PM</th>
-                    <td class="col-10 border-right"><input type="text"></td>
-                    <td class="fas fa-save"></td>
+                    <th scope="row" class="col-1 border-right text-right">3PM</th>
+                    <td class="col-10 border-right">
+                        <input type="text" data-hour="15">
+                    </td>
+                    <td class="fas fa-save saveBtn"></td>
                 </tr>
                 <tr>
-                    <th scope="row" class="col-1 border-right border-bottom">5PM</th>
-                    <td class="col-10 border-right border-bottom"><input type="text"></td>
-                    <td class="fas fa-save border-bottom"></td>
+                    <th scope="row" class="col-1 border-right text-right">4PM</th>
+                    <td class="col-10 border-right">
+                        <input type="text" data-hour="16">
+                    </td>
+                    <td class="fas fa-save saveBtn"></td>
+                </tr>
+                <tr>
+                    <th scope="row" class="col-1 border-right border-bottom text-right">5PM</th>
+                    <td class="col-10 border-right border-bottom">
+                        <input type="text" data-hour="17">
+                    </td>
+                    <td class="fas fa-save saveBtn border-bottom"></td>
                 </tr>
             </tbody>
         </table>
