--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- Defines meta characteristics and links to external (bootstrap and google font) and internal stylesheets. -->
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +21,7 @@
         <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-        <!-- Timeblocks go here -->
+        <!-- Timeblock table using bootstrap table and classes -->
         <table class="table">
             <tbody>
                 <tr>
@@ -90,6 +91,7 @@
         </table>
     </div>
 
+    <!-- Links to third-party scripts via the jquery and moment CDNs. -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/app.js"></script>
